syntax = "proto3";

package beer.supportly.chat;

import "google/protobuf/empty.proto";

message ChatMessage {
  string roomId = 1;
  string senderId = 2;
  string senderDisplayName = 3;
  string message = 4;
  string timestamp = 5;
}

message ChatRoom {
  string id = 1;
}

message JoinRoomRequest {
  string roomId = 1;
  string userId = 2;
  string userDisplayName = 3;
}

message LeaveRoomRequest {
  string roomId = 1;
  string userId = 2;
}

service ChatService {
  rpc JoinChatRoom(JoinRoomRequest) returns (stream ChatMessage);
  rpc SendMessage(ChatMessage) returns (google.protobuf.Empty);
  rpc LeaveChatroom(LeaveRoomRequest) returns (google.protobuf.Empty);
}